Add success message to contact form

--- a/src/_styles/06_components/_components.contact.scss
+++ b/src/_styles/06_components/_components.contact.scss
@@ -83,4 +83,14 @@
 			}
 		}
 	}
+
+	// {{contact__success}}
+	&__success{
+		@include font('Breakers-Light');
+		@include m-color('contact-button');
+		display: none;
+		padding: 6px 25px;
+		margin: 25px 0 100px;
+		font-size: 24px;
+	}
 }
