Add all pillars prototype

--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -28,15 +28,15 @@ mixin header(spec)
 		div.mobile__menu__close__container
 			img.mobile__menu__close__icon(src='/images/menu-close.png')
 			div.mobile__menu__close__text Menu
-		a.mobile__menu__button__container.fitness(href="/pillar.html")
+		a.mobile__menu__button__container.fitness(href="/pillar-fitness.html")
 			div.mobile__menu__button__icon__container
 				img(src='/images/fitness-nav.png')
 			div.mobile__menu__button__text Fitness
-		a.mobile__menu__button__container.lifestyle(href="/pillar.html")
+		a.mobile__menu__button__container.lifestyle(href="/pillar-lifestyle.html")
 			div.mobile__menu__button__icon__container
 				img(src='/images/lifestyle-nav.png')
 			div.mobile__menu__button__text Lifestyle
-		a.mobile__menu__button__container.food(href="/pillar.html")
+		a.mobile__menu__button__container.food(href="/pillar-food.html")
 			div.mobile__menu__button__icon__container
 				img(src='/images/food-nav.png')
 			div.mobile__menu__button__text Food
