Add links to about page

--- a/src/about.jade
+++ b/src/about.jade
@@ -40,13 +40,13 @@ block content
 				div.columns.large-8.large-centered
 					div.about__button__container--outer
 						div.about__button__container--inner
-							a.about__button(href="#")
+							a.about__button(href="/pillar-fitness.html")
 								img(src="/images/filter-fitness-off.png")
 								div.about__button__text Fitness
-							a.about__button(href="#")
+							a.about__button(href="/pillar-lifestyle.html")
 								img(src="/images/filter-lifestyle-off.png")
 								div.about__button__text Lifestyle
-							a.about__button(href="#")
+							a.about__button(href="/pillar-food.html")
 								img(src="/images/filter-food-off.png")
 								div.about__button__text Food
 			div.standard__pattern__container.sticky-stop(style="background-image: url('/images/pattern.png');")
