Remove pinterest Add mailto to side of article

--- a/src/standard.jade
+++ b/src/standard.jade
@@ -89,6 +89,10 @@ block content
 								img.standard__social__icon(src="/images/twitter-share.png")
 								img.standard__social__icon-white(src="/images/twitter-share-w.png")
 								span Tweet
+							a.standard__social__container--inner(href="mailto:?subject=Why group training pays off better in the long run&body=http://htmldesign.ald.aws1.adelphi.digital/standard.html/")
+								img.standard__social__icon(src="/images/email-share.png")
+								img.standard__social__icon-white(src="/images/email-share-w.png")
+								span Email
 			div.standard__pattern__container.sticky-stop(style="background-image: url('/images/pattern.png');")
 				div.row
 					div.columns.large-12
