Add pattern to popout menu Remove text in hover for articles

--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -32,7 +32,9 @@
 				}
 				.article__icon{
 					display: inline;
-					margin-bottom: 10px;
+				}
+				.article__tag{
+					display: none;
 				}
 			}
 		}
