--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -253,8 +253,9 @@
 					padding: 3.44827586206897%;
 
 					@include mq(large){
-						width: 50%;
 						float: right;
+						width: 50%;
+						padding: 20px 20px 30px 40px;
 					}
 				}
 
@@ -296,10 +297,22 @@
 					-webkit-transition: all 1s ease-in-out;
 				}
 
+				.article--small--full &{
+					padding: 3.44827586206897%;
+					
+					@include mq(large){
+						padding: 20px 20px 4px;
+					}
+				}
+
 				.article--small--half &{
 					width: 100%;
-					height: 100%;
+    				height: 54.166666666%;
 					padding: 3.44827586206897%;
+					
+					@include mq(large){
+						padding: 20px;
+					}
 				}
 
 				// To show absolute for header slick but not the masonry 
@@ -311,6 +324,10 @@
 			// {{article__text__container--inner}}
 			&--inner{
 
+				.article--small--half &{
+					overflow: hidden;
+					height: 100%;
+				}
 			}
 		}
 	}
