Add background to subscribe block

--- a/src/_styles/06_components/_components.subscribe.scss
+++ b/src/_styles/06_components/_components.subscribe.scss
@@ -4,7 +4,9 @@
 	&__container{
 		@include m-bgcolor('subscribe');
 		text-align: center;
-		padding: 50px 0 55px;
+	    background-image: url('/images/pattern-dark.png');
+	    background-size: 25%;
+		padding: 60px 0;
 		
 		.container--standard &{
 			background-color: rgba(88, 162, 209, 0.8);
