--- a/src/_styles/06_components/_components.mobile.scss
+++ b/src/_styles/06_components/_components.mobile.scss
@@ -65,7 +65,7 @@
 	    		margin-bottom: 10px;
 
 	    		@include mq(large){
-	    			padding: 10px 0;
+	    			padding: 5px 0 10px;
 	    		}
 
 	    		&:hover, &:focus{
@@ -92,6 +92,7 @@
 
 	    		@include mq(large){
 	    			font-size: 32px;
+	    			padding-top: 5px;
 	    		}
 	    	}
 
