--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -267,8 +267,9 @@
 					padding: 3.44827586206897%;
 
 					@include mq(large){
-						width: 50%;
 						float: right;
+						width: 50%;
+						padding: 20px;
 					}
 				}
 
@@ -295,6 +296,10 @@
 					position: absolute;
 					transition: all 1s ease-in-out;
 					-webkit-transition: all 1s ease-in-out;
+				}
+
+				.slick-slide .article--small--full &{
+					padding: 3.44827586206897%;
 				}
 
 				.article--small--full &{
