--- a/src/_styles/06_components/_components.footer.scss
+++ b/src/_styles/06_components/_components.footer.scss
@@ -129,6 +129,12 @@
 		justify-content: space-between;
 		padding: 20px;
 		margin-bottom: 40px;
+		transition: all 0.3s;
+		-webkit-transition: all 0.3s;
+
+		@include mq(bp480){
+			padding: 20px 20%;
+		}
 
 		@include mq(medium){
 			padding: 20px 30%;
