Add close button on subscribe popout

--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -60,6 +60,8 @@ mixin header(spec)
 	div.mobile__subscribe.mobile__subscribe__container--outer
 		div.mobile__subscribe__container--center
 			div.mobile__subscribe__container--inner
+				div.mobile__subscribe__close
+					img.mobile__subscribe__close__icon(src="/images/menu-close.png")
 				div.subscribe__icon__container
 					img.subscribe__icon(src='/images/newsletter-pop.png')
 				div.subscribe__title Subscribe to our newsletter
