--- a/src/_styles/06_components/_components.mobile.scss
+++ b/src/_styles/06_components/_components.mobile.scss
@@ -244,9 +244,24 @@
 				text-align: center;
 				pointer-events: auto;
 				max-width: 360px;
-				height: 480px;
-				padding: 30px 15px;
+				height: auto;
+				padding: 15px 15px 30px;
 				border-radius: 4px;
+			}
+		}
+
+		// {{mobile__subscribe__close}}
+		&__close{
+			display: flex;
+			align-items: center;
+			justify-content: flex-end;
+			margin-bottom: 10px;
+
+			// {{mobile__subscribe__close__icon}}
+			&__icon{
+				cursor: pointer;
+				height: 20px;
+				width: 20px;
 			}
 		}
 	}
