--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -236,10 +236,11 @@
 					width: 100%;
 					height: 100%;
 					display: flex;
-					align-items: flex-end;
+					align-items: flex-start;
 					padding: 3.44827586206897%;
 
 					@include mq(large){
+						align-items: flex-end;
 						width: 34.48275862068966%;
 						float: right;
 					}
@@ -249,10 +250,11 @@
 					width: 100%;
 					height: 100%;
 					display: flex;
-					align-items: flex-end;
+					align-items: flex-start;
 					padding: 3.44827586206897%;
 
 					@include mq(large){
+						align-items: flex-end;
 						float: right;
 						width: 50%;
 						padding: 20px 20px 30px 40px;
@@ -263,10 +265,11 @@
 					width: 100%;
 					height: 100%;
 					display: flex;
-					align-items: flex-end;
+					align-items: flex-start;
 					padding: 3.44827586206897%;
 
 					@include mq(large){
+						align-items: flex-end;
 						float: right;
 						width: 50%;
 						padding: 20px;
