--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -38,12 +38,12 @@ body
 	+footer()
 
 	block scripts
-		script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js")
+		script(src="//ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js")
 		script(src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.1.0/masonry.pkgd.min.js")
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-infinitescroll/2.1.0/jquery.infinitescroll.min.js")
-		script(src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js")
-		script(src="https://npmcdn.com/headroom.js@0.9.3/dist/jQuery.headroom.min.js")
+		script(src="//cdnjs.cloudflare.com/ajax/libs/masonry/4.1.0/masonry.pkgd.min.js")
+		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery-infinitescroll/2.1.0/jquery.infinitescroll.min.js")
+		script(src="//npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js")
+		script(src="//npmcdn.com/headroom.js@0.9.3/dist/jQuery.headroom.min.js")
 		script(src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5735754b28f7188e")
 		script(src= baseUrl + 'scripts/main.js')
 		script.
