--- a/src/_modules/subscribe/subscribe.jade
+++ b/src/_modules/subscribe/subscribe.jade
@@ -11,7 +11,7 @@ mixin subscribe(spec)
 				div.subscribe__text Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet direct to your inbox, for busy people.
 				div.subscribe__text--bold.show-for-large I'm interested in
 				div.subscribe__mobile__btn.hide-for-large Subscribe here
-				form.subscribe__form.show-for-large(action="/", method="post")
+				form.subscribe__form.show-for-large#subscribe-form-2(action="/", method="post")
 					div.subscribe__checkbox__container
 						input.subscribe__checkbox#subscribe-fitness(type='checkbox', name='subscribe-checkbox')
 						label.subscribe__checkbox__label(for='subscribe-fitness')
@@ -26,5 +26,9 @@ mixin subscribe(spec)
 							span.subscribe__checkbox__span
 							| Food
 					div.subscribe__input__container
-						input.subscribe__input(placeholder="Enter your email..." onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your email...'")
+						input.subscribe__input#subscribe-fname-2(placeholder="First name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'First name'")
+					div.subscribe__input__container
+						input.subscribe__input#subscribe-lname-2(placeholder="Last name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Last name'")
+					div.subscribe__input__container
+						input.subscribe__input.subscribe__input--email#subscribe-email-2(placeholder="Enter your email..." onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your email...'")
 						div.subscribe__submit Send me daily dash
