--- a/src/_styles/06_components/_components.standard.scss
+++ b/src/_styles/06_components/_components.standard.scss
@@ -34,6 +34,12 @@
 			.page--fitness &{
 				@include m-bgcolor('fitness');
 			}
+			.page--lifestyle &{
+				@include m-bgcolor('lifestyle');
+			}
+			.page--food &{
+				@include m-bgcolor('food');
+			}
 		}
 	}
 
@@ -214,6 +220,67 @@
 			&-white{
 				margin-right: 10px;
 				display: none;
+			}
+		}
+	}
+
+	// {{standard__twitter-quote}}
+	&__twitter-quote{
+		position: relative;
+		display: block;
+		text-decoration: none;
+		max-width: 500px;
+		margin: 20px auto;
+
+		@include mq(bp480){
+			margin: 50px auto 30px;
+			padding-bottom: 45px;
+		}
+
+		&:after{
+			pointer-events: none;
+			content: '';
+			display: none;
+			position: absolute;
+			bottom: 0;
+			height: 5px;
+			width: 100px;
+			border-radius: 15px;
+			margin: 20px 0;
+			margin-bottom: 10px;
+			background: #276481 url('/images/twitter-share-w.png') no-repeat center;
+			background-size: 0px;
+			transition: height 0.3s, width 0.3s, margin-bottom 0.3s;
+			-webkit-transition: height 0.3s, width 0.3s, margin-bottom 0.3s;
+
+			@include mq(bp480){
+				display: block;
+			}
+		}
+
+		&:hover{
+			text-decoration: none;
+
+			&:after{
+				width: 30px;
+				height: 30px;
+				background-size: 20px;
+				transition: height 0.3s, width 0.3s, background-size 0.2s linear 0.2s, margin-bottom 0.3s;
+				-webkit-transition: height 0.3s, width 0.3s, background-size 0.2s linear 0.2s, margin-bottom 0.3s;
+				margin-bottom: 0;
+			}
+		}
+
+		span{
+			display: inline;
+			transition: background-color 0.3s;
+			color: #276481;
+			background-color: #DFE6EE;
+			padding: 3px;
+			font-size: 18px;
+
+			@include mq(large){
+				font-size: 22px;
 			}
 		}
 	}
